# backend/internal/http/docs/swagger.json
@@ -856,6 +856,57 @@
         }
     },
     "definitions": {
+        "handler.CheckQuery": {
+            "type": "object",
+            "required": [
+                "action",
+                "principal",
+                "resource_kind",
+                "resource_value"
+            ],
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "principal": {
+                    "type": "string"
+                },
+                "resource_kind": {
+                    "type": "string"
+                },
+                "resource_value": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.CheckRequest": {
+            "type": "object",
+            "required": [
+                "checks"
+            ],
+            "properties": {
+                "checks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.CheckQuery"
+                    }
+                }
+            }
+        },
+        "handler.CheckResponse": {
+            "type": "object",
+            "properties": {
+                "checks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.CheckQuery"
+                    }
+                }
+            }
+        },
         "handler.CreatePolicyRequest": {
             "type": "object",
             "required": [
@@ -887,8 +938,20 @@
                 "id"
             ],
             "properties": {
+                "attributes": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
                 "id": {
                     "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -899,6 +962,12 @@
                 "kind"
             ],
             "properties": {
+                "attributes": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
                 "id": {
                     "type": "string"
                 },
@@ -950,7 +1019,21 @@
             }
         },
         "handler.UpdatePrincipalRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "attributes": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
         },
         "handler.UpdateRoleRequest": {
             "type": "object",
@@ -1009,6 +1092,12 @@
                         "$ref": "#/definitions/model.Action"
                     }
                 },
+                "attribute_rules": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1029,6 +1118,9 @@
         "model.Principal": {
             "type": "object",
             "properties": {
+                "attributes": {
+                    "type": "object"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1052,6 +1144,9 @@
         "model.Resource": {
             "type": "object",
             "properties": {
+                "attributes": {
+                    "type": "object"
+                },
                 "created_at": {
                     "type": "string"
                 },
